# libcoinche

./: .fuse_hidden0000006400000003  .fuse_hidden000226b800000003  .gitignore  .travis.yml  Cargo.toml  Readme.md  index.html  search-index.js  update_doc.sh
libcoinche/: constant.CLUB.html  constant.DIAMOND.html  constant.HEART.html  constant.P0.html  constant.P1.html  constant.P2.html  constant.P3.html  constant.RANK_7.html  constant.RANK_8.html  constant.RANK_9.html  constant.RANK_A.html  constant.RANK_J.html  constant.RANK_K.html  constant.RANK_MASK.html  constant.RANK_Q.html  constant.RANK_X.html  constant.SPADE.html  enum.AuctionState.html  enum.BidError.html  enum.GameResult.html  enum.PlayError.html  enum.Target.html  enum.TrickResult.html  fn.deal_hands.html  fn.deal_seeded_hands.html  fn.score.html  fn.strength.html  fn.trump_score.html  fn.trump_strength.html  fn.usual_score.html  fn.usual_strength.html  index.html  sidebar-items.js  struct.Auction.html  struct.Card.html  struct.Contract.html  struct.Deck.html  struct.GameState.html  struct.Hand.html  struct.PlayerIterator.html  (+5 more)
libcoinche/bid/: enum.AuctionState.html  enum.BidError.html  enum.Target.html  fn.new_auction.html  index.html  sidebar-items.js  struct.Auction.html  struct.Contract.html
libcoinche/cards/: constant.CLUB.html  constant.DIAMOND.html  constant.HEART.html  constant.RANK_7.html  constant.RANK_8.html  constant.RANK_9.html  constant.RANK_A.html  enum.Rank.html  (+18 more)
rand/: struct.AsciiGenerator.html  struct.Generator.html
src/: bid.rs  cards.rs  game.rs  lib.rs  points.rs  pos.rs  trick.rs
(+76 files in other folders)
