[package]
authors = ["Alexandre Bury <alexandre.bury@gmail.com>"]
description = "A library to model the Coinche card game."
documentation = "http://gyscos.github.io/libcoinche/libcoinche/index.html"
keywords = ["coinche", "game", "cards"]
license = "MIT"
name = "libcoinche"
readme = "Readme.md"
repository = "https://github.com/Gyscos/libcoinche"
version = "0.2.0"

[dependencies]
rand = "0.3.15"
serde = "1.0.6"
serde_derive = "1.0.6"
