[package]
authors = ["Alexandre Bury <alexandre.bury@gmail.com>"]
description = "A library to model the Coinche card game."
documentation = "http://gyscos.github.io/libcoinche/libcoinche/index.html"
keywords = ["coinche", "game", "cards"]
license = "MIT"
name = "libcoinche"
readme = "Readme.md"
repository = "https://github.com/Gyscos/libcoinche"
version = "0.4.0"
edition="2018"

[dependencies]
rand = { version = "0.8.5", features = ["std_rng"] }
serde = { version = "1.0.137", features = ["derive"] }
